[gd_scene load_steps=12 format=2]

[ext_resource path="res://Enviroment/wall_purple.tres" type="TileSet" id=1]
[ext_resource path="res://Prefabs/Blob 2.0/SavePoint.tscn" type="PackedScene" id=2]
[ext_resource path="res://Prefabs/Items/Box Spawner.tscn" type="PackedScene" id=3]
[ext_resource path="res://Prefabs/Items/Path Item.tscn" type="PackedScene" id=5]
[ext_resource path="res://Prefabs/Enemies/Full Enemies/Rotifera_full.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scripts/Contoles & UI/CinemaCtrl.gd" type="Script" id=7]
[ext_resource path="res://Prefabs/Blob 2.0/PushHazard_Ablt.tscn" type="PackedScene" id=8]

[sub_resource type="CircleShape2D" id=1]
radius = 163.0

[sub_resource type="Curve2D" id=2]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -199.6, 4.33008, 0, 0, 0, 0, -199.6, 34.3301, 0, 0, 0, 0, 475.664, -207.924 )
}

[sub_resource type="Animation" id=3]
resource_name = "close"
length = 5.0
tracks/0/type = "bezier"
tracks/0/path = NodePath("Path Item:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"points": PoolRealArray( -6.35645, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 4.8 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Path Item:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -109.125, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 4.8 )
}

[sub_resource type="Curve2D" id=4]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 12422.4, 9863.26, 0, 0, 0, 0, 12736, 9752.79, 0, 0, 0, 0, 12903.5, 9745.66, 0, 0, 0, 0, 12982.4, 9744.16, 0, 0, 0, 0, 13092.7, 9739.92, 0, 0, 0, 0, 13402.4, 9731.4 )
}

[node name="Demo_terrain04" type="Node2D"]

[node name="CinemaCtrl" type="Node2D" parent="."]
position = Vector2( 14599.6, 9985.67 )
script = ExtResource( 7 )
anim_string = "LevelsDemo_boss_intro"

[node name="Area2D" type="Area2D" parent="CinemaCtrl"]
position = Vector2( 95.2744, 7.59961 )
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="CinemaCtrl/Area2D"]
shape = SubResource( 1 )

[node name="Position2D" type="Position2D" parent="CinemaCtrl"]
position = Vector2( 1006.94, 88.7764 )

[node name="PushHazard_Ablt" parent="CinemaCtrl" instance=ExtResource( 8 )]
position = Vector2( 2840.54, -662.08 )

[node name="Path Item" parent="CinemaCtrl" instance=ExtResource( 5 )]
position = Vector2( -117.48, -109.125 )
item_type = 0

[node name="Path2D" parent="CinemaCtrl/Path Item" index="0"]
z_index = -21
curve = SubResource( 2 )

[node name="Anim_Door" type="AnimationPlayer" parent="CinemaCtrl"]
anims/close = SubResource( 3 )

[node name="Timer" type="Timer" parent="CinemaCtrl"]
wait_time = 3.0
one_shot = true

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 200, 200 )
compatibility_mode = true
collision_layer = 2
format = 1
tile_data = PoolIntArray( 2752585, 0, 0, 2752586, 1, 0, 2752587, 1, 0, 2752588, 1, 0, 2752589, 1, 0, 2752590, 1, 0, 2752591, 1, 0, 2752592, 1, 0, 2752593, 1, 0, 2752594, 1, 0, 2752595, 1, 0, 2752596, 2, 0, 2818121, 5, 0, 2818122, 4, 0, 2818123, 4, 0, 2818124, 4, 0, 2818125, 4, 0, 2818126, 4, 0, 2818127, 4, 0, 2818128, 4, 0, 2818129, 4, 0, 2818130, 4, 0, 2818131, 4, 0, 2818132, 3, 0, 2883636, 4, 0, 2883637, 4, 0, 2883638, 4, 0, 2883639, 4, 0, 2883640, 4, 0, 2883641, 4, 0, 2883642, 4, 0, 2883643, 4, 0, 2883644, 4, 0, 2883656, 0, 0, 2883657, 12, 0, 2883658, 10, 0, 2883659, 7, 0, 2883660, 7, 0, 2883661, 7, 0, 2883662, 7, 0, 2883663, 7, 0, 2883664, 7, 0, 2883665, 9, 0, 2883666, 4, 0, 2883667, 4, 0, 2883668, 3, 0, 2949170, 4, 0, 2949171, 4, 0, 2949172, 10, 0, 2949173, 7, 0, 2949174, 7, 0, 2949175, 7, 0, 2949176, 9, 0, 2949177, 10, 0, 2949178, 7, 0, 2949179, 9, 0, 2949180, 4, 0, 2949181, 4, 0, 2949182, 1, 0, 2949183, 1, 0, 2949184, 1, 0, 2949185, 1, 0, 2949186, 1, 0, 2949187, 1, 0, 2949188, 1, 0, 2949189, 1, 0, 2949190, 1, 0, 2949191, 1, 0, 2949192, 12, 0, 2949193, 4, 0, 2949194, 3, 0, 2949201, 6, 0, 2949202, 9, 0, 2949203, 4, 0, 2949204, 3, 0, 3014706, 4, 0, 3014707, 10, 0, 3014708, 8, 0, 3014712, 6, 0, 3014713, 8, 0, 3014715, 5, 0, 3014716, 4, 0, 3014717, 4, 0, 3014718, 4, 0, 3014719, 4, 0, 3014720, 4, 0, 3014721, 4, 0, 3014722, 4, 0, 3014723, 4, 0, 3014724, 4, 0, 3014725, 4, 0, 3014726, 4, 0, 3014727, 4, 0, 3014728, 4, 0, 3014729, 10, 0, 3014730, 8, 0, 3014738, 5, 0, 3014739, 4, 0, 3014740, 3, 0, 3080242, 4, 0, 3080243, 3, 0, 3080251, 5, 0, 3080252, 10, 0, 3080253, 7, 0, 3080254, 7, 0, 3080255, 7, 0, 3080256, 7, 0, 3080257, 7, 0, 3080258, 7, 0, 3080259, 7, 0, 3080260, 7, 0, 3080261, 7, 0, 3080262, 7, 0, 3080263, 9, 0, 3080264, 10, 0, 3080265, 8, 0, 3080274, 5, 0, 3080275, 4, 0, 3080276, 3, 0, 3145777, 4, 0, 3145778, 4, 0, 3145779, 3, 0, 3145782, 0, 0, 3145783, 2, 0, 3145785, 0, 0, 3145786, 2, 0, 3145787, 5, 0, 3145788, 3, 0, 3145799, 5, 0, 3145800, 3, 0, 3145810, 5, 0, 3145811, 4, 0, 3145812, 3, 0, 3211314, 7, 0, 3211315, 8, 0, 3211317, 0, 0, 3211318, 12, 0, 3211319, 3, 0, 3211321, 6, 0, 3211322, 8, 0, 3211323, 6, 0, 3211324, 8, 0, 3211335, 6, 0, 3211336, 8, 0, 3211346, 5, 0, 3211347, 4, 0, 3211348, 3, 0, 3276853, 6, 0, 3276854, 9, 0, 3276855, 3, 0, 3276859, 0, 0, 3276860, 2, 0, 3276871, 0, 0, 3276872, 2, 0, 3276882, 5, 0, 3276883, 4, 0, 3276884, 3, 0, 3342386, 1, 0, 3342387, 2, 0, 3342390, 6, 0, 3342391, 8, 0, 3342395, 5, 0, 3342396, 3, 0, 3342407, 5, 0, 3342408, 3, 0, 3342418, 5, 0, 3342419, 4, 0, 3342420, 3, 0, 3407922, 4, 0, 3407923, 3, 0, 3407928, 0, 0, 3407929, 2, 0, 3407931, 5, 0, 3407932, 11, 0, 3407933, 1, 0, 3407934, 1, 0, 3407935, 1, 0, 3407936, 1, 0, 3407937, 1, 0, 3407938, 1, 0, 3407939, 1, 0, 3407940, 1, 0, 3407941, 1, 0, 3407942, 1, 0, 3407943, 12, 0, 3407944, 11, 0, 3407945, 2, 0, 3407954, 5, 0, 3407955, 4, 0, 3407956, 3, 0, 3473458, 4, 0, 3473459, 3, 0, 3473464, 5, 0, 3473465, 11, 0, 3473466, 1, 0, 3473467, 12, 0, 3473468, 4, 0, 3473469, 4, 0, 3473470, 4, 0, 3473471, 4, 0, 3473472, 4, 0, 3473473, 4, 0, 3473474, 4, 0, 3473475, 4, 0, 3473476, 4, 0, 3473477, 4, 0, 3473478, 4, 0, 3473479, 4, 0, 3473480, 4, 0, 3473481, 11, 0, 3473482, 2, 0, 3473490, 5, 0, 3473491, 4, 0, 3473492, 3, 0, 3538993, 4, 0, 3538994, 4, 0, 3538995, 11, 0, 3538996, 2, 0, 3538998, 0, 0, 3538999, 1, 0, 3539000, 12, 0, 3539001, 4, 0, 3539002, 4, 0, 3539003, 4, 0, 3539004, 4, 0, 3539005, 7, 0, 3539006, 7, 0, 3539007, 7, 0, 3539008, 7, 0, 3539009, 7, 0, 3539010, 7, 0, 3539011, 7, 0, 3539012, 7, 0, 3539013, 7, 0, 3539014, 7, 0, 3539015, 7, 0, 3539016, 9, 0, 3539017, 4, 0, 3539018, 3, 0, 3539025, 0, 0, 3539026, 12, 0, 3539027, 4, 0, 3539028, 3, 0, 3604529, 4, 0, 3604530, 4, 0, 3604531, 4, 0, 3604532, 11, 0, 3604533, 1, 0, 3604534, 12, 0, 3604535, 4, 0, 3604536, 4, 0, 3604537, 4, 0, 3604538, 4, 0, 3604539, 4, 0, 3604540, 4, 0, 3604552, 5, 0, 3604553, 4, 0, 3604554, 11, 0, 3604555, 1, 0, 3604556, 1, 0, 3604557, 1, 0, 3604558, 1, 0, 3604559, 1, 0, 3604560, 1, 0, 3604561, 12, 0, 3604562, 4, 0, 3604563, 4, 0, 3604564, 3, 0, 3670067, 4, 0, 3670068, 4, 0, 3670069, 4, 0, 3670070, 4, 0, 3670071, 4, 0, 3670072, 4, 0, 3670073, 4, 0, 3670074, 4, 0, 3670075, 4, 0, 3670076, 4, 0, 3670088, 5, 0, 3670089, 4, 0, 3670090, 4, 0, 3670091, 4, 0, 3670092, 4, 0, 3670093, 4, 0, 3670094, 4, 0, 3670095, 4, 0, 3670096, 4, 0, 3670097, 4, 0, 3670098, 4, 0, 3670099, 4, 0, 3670100, 3, 0, 3735624, 6, 0, 3735625, 7, 0, 3735626, 7, 0, 3735627, 7, 0, 3735628, 7, 0, 3735629, 7, 0, 3735630, 7, 0, 3735631, 7, 0, 3735632, 7, 0, 3735633, 7, 0, 3735634, 7, 0, 3735635, 7, 0, 3735636, 8, 0 )
__meta__ = {
"_editor_description_": ""
}

[node name="SavePoint" parent="." instance=ExtResource( 2 )]
position = Vector2( 13192.8, 10176.5 )

[node name="Path Item" parent="." instance=ExtResource( 5 )]

[node name="Path2D" parent="Path Item" index="0"]
curve = SubResource( 4 )

[node name="Boss" type="Node2D" parent="."]
position = Vector2( 15606.3, 10074.5 )

[node name="Path2D" parent="Boss" instance=ExtResource( 6 )]

[node name="PathFollow2D" parent="Boss/Path2D" index="2"]
position = Vector2( 726.485, 26.0269 )
offset = 0.0

[node name="Rotifera" parent="Boss/Path2D/PathFollow2D" index="0"]
moveTime = 5
pullTime = 5
playerPullForce = 5
health = 1

[node name="Box Spawner" parent="." instance=ExtResource( 3 )]
position = Vector2( 15200.2, 10856.9 )
[connection signal="body_entered" from="CinemaCtrl/Area2D" to="CinemaCtrl" method="_on_Area2D_body_entered"]
[connection signal="timeout" from="CinemaCtrl/Timer" to="CinemaCtrl" method="back_control"]
[connection signal="defeated" from="Boss/Path2D/PathFollow2D/Rotifera" to="CinemaCtrl" method="boss_defeated"]

[editable path="CinemaCtrl/Path Item"]

[editable path="Path Item"]

[editable path="Boss/Path2D"]
